python-werkzeug (0.5.1-1) unstable; urgency=low

  [ Noah Slater ]
  * New upstream release (0.5).
  * Updated debian/control, removed Depends on python-wsgiref.
  * Updated debian/control, updated Build-Depends on debhelper to 7.2.11.
  * Updated debian/rules, use /usr/share/pyshared directory. Closes: #517302

  [ Piotr Ożarowski ]
  * New upstream release (0.5.1)
  * New build dependencies:
    - python-simplejson (to build docs)
    - python-nose and python-lxml (to run tests)
  * Standards-Version bumped to 3.8.2 (no changes needed)
  * Add myself to Uploaders

 -- Piotr Ożarowski <piotr@debian.org>  Fri, 07 Aug 2009 19:44:53 +0200

python-werkzeug (0.4.1-1) experimental; urgency=low

  * New upstream release. Closes: #511553
  * Added debian/README.source file.
  * Updated debian/control, updated Vcs-Browser.
  * Updated debian/control, updated Description.
  * Updated debian/copyright, updated for latest format proposal.
  * Updated debian/rules, improved uscan options for get-orig-source.

 -- Noah Slater <nslater@tumbolia.org>  Sun, 18 Jan 2009 20:01:23 +0000

python-werkzeug (0.3.1-1) unstable; urgency=high

  * New upstream release, fixes a security issue.

 -- Noah Slater <nslater@tumbolia.org>  Wed, 25 Jun 2008 19:32:07 +0100

python-werkzeug (0.3-1) unstable; urgency=low

  * New upstream release.
  * Moved documentation to standard location.
  * Fixed shared file permissions.
  * Updated debian/control, updated Suggests.
  * Updated debian/control, updated Standards-Version to 3.8.0.
  * Updated debian/copyright, updated for latest format proposal.

 -- Noah Slater <nslater@tumbolia.org>  Tue, 17 Jun 2008 22:35:18 +0100

python-werkzeug (0.2-2) unstable; urgency=low

  * Updated debian/control, updated Depends. Closes: #468704

 -- Noah Slater <nslater@tumbolia.org>  Tue, 04 Mar 2008 23:40:55 +0000

python-werkzeug (0.2-1) unstable; urgency=low

  * New upstream release.
  * Updated debian/control, updated Uploaders.