@@ -1,12 +1,0 @@
-Source README
-=============
-
-The upstream source can be downloaded with the following command:
-
-  ./debian/rules get-orig-source
-
-You will need the following packages installed:
-
-  devscripts
-
- -- Noah Slater <nslater@tumbolia.org>, Sat, 27 Dec 2008 08:03:50 +0000
