@@ -1,3 +1,2 @@
 version=3
-#http://cheeseshop.python.org/packages/source/W/Werkzeug/Werkzeug-(.*)\.tar\.gz
-http://cheeseshop.python.org/packages/source/W/Werkzeug/Werkzeug-(.*)\.zip
+http://cheeseshop.python.org/packages/source/W/Werkzeug/Werkzeug-(.*)\.tar\.gz
